--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,20 @@ libp2p = { version = "0.55.0", features = [
     "ping",
     "gossipsub",
     "kad",
+    "request-response",
+    "cbor",
+    "autonat",
+    "json",
+    "floodsub",
 ] }
 clap = "4.5.31"
 tokio = { version = "1.43.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 futures = "0.3.31"
 libp2p-swarm-derive = "0.35.0"
+bincode = "1.3.3"
+async-trait = "0.1.87"
+serde = { version = "1.0.218", features = ["derive"] }
+log = "0.4.26"
+uuid = { version = "1.15.1", features = ["fast-rng", "v4", "serde"] }
+serde_json = { version = "1.0.140", features = ["preserve_order"] }
