--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ thiserror = "2.0.12"
 anyhow = { version = "1.0.97", features = ["backtrace"] }
 clap = { version = "4.5.31", features = ["derive"] }
 tap = "1.0.1"
+derive-getters = "0.5.0"
+bon = "3.4.0"
+chrono = "0.4.40"
 
 
 [build-dependencies]
