--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tap = "1.0.1"
 derive-getters = "0.5.0"
 bon = "3.4.0"
 chrono = "0.4.40"
+tui-textarea = { version = "0.7.0", features = ["ratatui"] }
 
 
 [build-dependencies]
